Add AccessControl Endpoints
